# crypto-telegram-bot

./: autoscan.py  build.sh  chart_pattern.py  clear_webhook.py  main.py  patterns_custom.py  pyproject.toml  requirement.txt  requirements.txt  strategy.py  trades_log.csv  utils.py
